<?xml version="1.0" encoding="utf-8"?>
<org.apmem.tools.layouts.FlowLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#10FFFFFF"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="16dp">

    <FrameLayout
        android:id="@+id/type_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_type_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_t"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/type_one" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/type_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_type_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_t"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/type_work" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/type_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_type_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_t"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/type_week" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/type_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_type_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_t"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/type_month" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/type_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_type_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_t"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/type_year" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/type_year_cn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_type_year_cn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_t"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/type_year_cn" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/type_zdy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_type_zdy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_t"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/type_zdy" />
    </FrameLayout>

</org.apmem.tools.layouts.FlowLayout>